--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -81,8 +81,9 @@ jobs:
           cd ./rocket-rule
           wget https://github.com/IrineSistiana/mosdns/releases/download/v4.5.3/mosdns-linux-amd64.zip -O mosdns.zip && unzip mosdns.zip
           cp ../geoip.dat ./geoip.dat && cp ../geosite.dat ./geosite.dat
-          mkdir -p ./rocket-rule/sites &&　mkdir -p ./rocket-rule/ips
+          mkdir -p sites 
           ./mosdns v2dat unpack-domain -o ./rocket-rule/sites/  ./geosite.dat
+          mkdir -p ips
           ./mosdns v2dat unpack-ip -o ./rocket-rule/ips/  ./geoip.dat
           list=($(ls ./ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
