--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,7 +83,7 @@ jobs:
           cp ../geoip.dat ./geoip.dat && cp ../geosite.dat ./geosite.dat
           mkdir -p ips
           ./mosdns v2dat unpack-ip -o ./rocket-rule/ips/  ./geoip.dat
-          list=($(ls ./ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          list=($(ls ./rocket-rule/ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
           	sed -i 's/^/IP-CIDR,/g' ./rocket-rule/ips/geoip_${list[i]}.txt
           	sed -i 's/$/,${list[i]}/g' ./rocket-rule/ips/geoip_${list[i]}.txt
@@ -93,7 +93,7 @@ jobs:
           done
           mkdir -p sites 
           ./mosdns v2dat unpack-domain -o ./rocket-rule/sites/  ./geosite.dat
-          list=($(ls ./sites | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          list=($(ls ./rocket-rule/sites | sed 's/geoip_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
             sed -i '/^regexp:/d' ./rocket-rule/sites/geosite_${list[i]}.txt
             sed -i 's/^full:|^rootDomain:/DOMAIN,/g' ./rocket-rule/sites/geosite_${list[i]}.txt
