--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,25 +82,25 @@ jobs:
           wget https://github.com/IrineSistiana/mosdns/releases/download/v4.5.3/mosdns-linux-amd64.zip -O mosdns.zip && unzip mosdns.zip
           cp ../geoip.dat ./geoip.dat && cp ../geosite.dat ./geosite.dat
           mkdir -p ips
-          ./mosdns v2dat unpack-ip -o ./rocket-rule/ips/  ./geoip.dat
-          list=($(ls ./rocket-rule/ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          ./mosdns v2dat unpack-ip -o  ./ips/  geoip.dat
+          list=($(ls ./ips | sed 's/geoip_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
-          	sed -i 's/^/IP-CIDR,/g' ./rocket-rule/ips/geoip_${list[i]}.txt
-          	sed -i 's/$/,${list[i]}/g' ./rocket-rule/ips/geoip_${list[i]}.txt
+          	sed -i 's/^/IP-CIDR,/g' ./ips/geoip_${list[i]}.txt
+          	sed -i 's/$/,${list[i]}/g' ./ips/geoip_${list[i]}.txt
           	# sed -i '1s/^/{\n  "version": 1,\n  "rules": [\n    {\n      "ip_cidr": [\n/g' ips/geoip_${list[i]}.txt
           	# sed -i '$ s/,$/\n      ]\n    }\n  ]\n}/g' ips/geoip_${list[i]}.txt
-          	mv ./rocket-rule/ips/geoip_${list[i]}.txt ./rocket-rule/ips/${list[i]}.list
+          	mv ./ips/geoip_${list[i]}.txt ./ips/${list[i]}.list
           done
           mkdir -p sites 
-          ./mosdns v2dat unpack-domain -o ./rocket-rule/sites/  ./geosite.dat
-          list=($(ls ./rocket-rule/sites | sed 's/geoip_//g' | sed 's/\.txt//g'))
+          ./mosdns v2dat unpack-domain -o ./sites/  geosite.dat
+          list=($(ls ./sites | sed 's/geoip_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
-            sed -i '/^regexp:/d' ./rocket-rule/sites/geosite_${list[i]}.txt
-            sed -i 's/^full:|^rootDomain:/DOMAIN,/g' ./rocket-rule/sites/geosite_${list[i]}.txt
-            sed -i 's/^keyword:|^plain:/DOMAIN-KEYWORD,/g' ./rocket-rule/sites/geosite_${list[i]}.txt
-            sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/! { /\./! s/^/DOMAIN-SUFFIX,/ } }' ./rocket-rule/sites/geosite_${list[i]}.txt
-            sed -i 's/$/,${list[i]}/g' ./rocket-rule/sites/geosite_${list[i]}.txt
-          	mv ./rocket-rule/sites/geosite_${list[i]}.txt ./rocket-rule/sites/${list[i]}.list
+            sed -i '/^regexp:/d' ./sites/geosite_${list[i]}.txt
+            sed -i 's/^full:|^rootDomain:/DOMAIN,/g' ./sites/geosite_${list[i]}.txt
+            sed -i 's/^keyword:|^plain:/DOMAIN-KEYWORD,/g' ./sites/geosite_${list[i]}.txt
+            sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/! { /\./! s/^/DOMAIN-SUFFIX,/ } }' ./sites/geosite_${list[i]}.txt
+            sed -i 's/$/,${list[i]}/g' ./sites/geosite_${list[i]}.txt
+          	mv ./sites/geosite_${list[i]}.txt ./sites/${list[i]}.list
           done
           rm LICENSE README.md config.yaml geoip.dat geosite.dat  mosdns mosdns.zip  
 
