--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,10 +96,11 @@ jobs:
           list=($(ls ./sites | sed 's/geosite_//g' | sed 's/\.txt//g'))
           for ((i = 0; i < ${#list[@]}; i++)); do
             sed -i '/^regexp:/d' ./sites/geosite_${list[i]}.txt
-            sed -i 's/^full:|^rootDomain:/DOMAIN,/g' ./sites/geosite_${list[i]}.txt
+            sed -i 's/^full:|^rootdomain:/DOMAIN,/g' ./sites/geosite_${list[i]}.txt
             sed -i 's/^keyword:|^plain:/DOMAIN-KEYWORD,/g' ./sites/geosite_${list[i]}.txt
-            # sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/! { /\./! s/^/DOMAIN-SUFFIX,/ } }' ./sites/geosite_${list[i]}.txt
-            sed -i 's/^/DOMAIN-SUFFIX,/g' ./sites/geosite_${list[i]}.txt
+            sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/! { /\./! s/^/DOMAIN-SUFFIX,/ } }' ./sites/geosite_${list[i]}.txt
+            sed -i '/^DOMAIN,/!{ /^DOMAIN-KEYWORD,/!  s/^/DOMAIN-SUFFIX,/  }' ./sites/geosite_${list[i]}.txt
+            # sed -i 's/^/DOMAIN-SUFFIX,/g' ./sites/geosite_${list[i]}.txt
             sed -i "s/$/,${list[i]}/g" ./sites/geosite_${list[i]}.txt
           	mv ./sites/geosite_${list[i]}.txt ./sites/${list[i]}.list
           done
