--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,8 @@ name: Release
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 22 * * *"
+   # - cron: "30 22 * * *"
+     - cron: "30 22 */90 * *"
 jobs:
   build:
     name: Build
