--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 22 */3 * *"
+    - cron: "30 21 */3 * *"
     #- cron: "30 22 */90 * *"
 jobs:
   build:
@@ -27,8 +27,6 @@ jobs:
         run: |
            go run -v .
            
-           
-
       - name: Get geosite.dat geoip.dat files from Loyalsoldier
         run: |
           wget -O geosite.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat
@@ -49,7 +47,7 @@ jobs:
         run: |
           mkdir -p ./sing-rule/geo
           cd ./sing-rule/geo
-          wget https://github.com/SagerNet/sing-box/releases/download/v1.8.0-alpha.11/sing-box-1.8.0-alpha.11-linux-amd64.tar.gz -O sing-box.tar.gz && tar zxvf sing-box.tar.gz && mv sing-box-1.8.0-alpha.11-linux-amd64/sing-box ./ && rm -r sing-box-1.8.0-alpha.11-linux-amd64
+          wget https://github.com/SagerNet/sing-box/releases/download/v1.8.0-rc.6/sing-box-1.8.0-rc.6-linux-amd64.tar.gz -O sing-box.tar.gz && tar zxvf sing-box.tar.gz && mv sing-box-1.8.0-rc.6-linux-amd64/sing-box ./ && rm -r sing-box-1.8.0-rc.6-linux-amd64
           wget https://github.com/IrineSistiana/mosdns/releases/download/v4.5.3/mosdns-linux-amd64.zip -O mosdns.zip && unzip mosdns.zip
           cp ../../geoip.dat ./ && cp ../../geoip.db ./geoip.db && cp ../../geosite.db ./
 
@@ -122,34 +120,34 @@ jobs:
           install -Dp ./geosite.db ./publish/
           
           
-          install -Dp ./rule-set/geosite-china-list.srs ./publish/
-          install -Dp ./rule-set/geosite-gfw.srs ./publish/
-          install -Dp ./rule-set/geosite-geolocation-cn.srs ./publish/geosite-geolocation-cn.srs
-          install -Dp ./rule-set/geosite-geolocation-!cn.srs ./publish/geosite-geolocation-!cn.srs
-          install -Dp ./rule-set/geosite-category-ads-all.srs ./publish/
-          install -Dp ./rule-set/geosite-google.srs ./publish/
-          install -Dp ./rule-set/geosite-apple.srs ./publish/
-          install -Dp ./rule-set/geosite-telegram.srs ./publish/
-          install -Dp ./rule-set/geosite-steam.srs ./publish/
-          install -Dp ./rule-set/geosite-youku.srs ./publish/
-          install -Dp ./rule-set/geosite-cloudflare.srs ./publish/
-          install -Dp ./rule-set/geosite-cloudflare-cn.srs ./publish/
-          install -Dp ./rule-set/geosite-fastly.srs ./publish/
-          install -Dp ./rule-set/geosite-twitter.srs ./publish/
-          install -Dp ./rule-set/geosite-facebook.srs ./publish/
-          install -Dp ./rule-set/geosite-facebook-dev.srs ./publish/
-          install -Dp ./rule-set/geosite-win-spy.srs ./publish/
-          install -Dp ./rule-set/geosite-win-extra.srs ./publish/
-          install -Dp ./rule-set/geosite-win-update.srs ./publish/
-          install -Dp ./rule-set/geosite-alibabacloud.srs ./publish/
-          install -Dp ./rule-set/geosite-alibaba@!cn.srs ./publish/
-          install -Dp ./rule-set/geosite-youtube.srs ./publish/
-          install -Dp ./rule-set/geosite-youtube@cn.srs ./publish/
-          install -Dp ./rule-set/geosite-okx@cn.srs ./publish/
-          install -Dp ./rule-set/geosite-binance.srs ./publish/
-          install -Dp ./rule-set/geosite-okx.srs ./publish/
-          install -Dp ./rule-set/geosite-apple-dev.srs ./publish/
-          install -Dp ./rule-set/geosite-tencent.srs ./publish/
+          # install -Dp ./rule-set/geosite-china-list.srs ./publish/
+          # install -Dp ./rule-set/geosite-gfw.srs ./publish/
+          # install -Dp ./rule-set/geosite-geolocation-cn.srs ./publish/geosite-geolocation-cn.srs
+          # install -Dp ./rule-set/geosite-geolocation-!cn.srs ./publish/geosite-geolocation-!cn.srs
+          # install -Dp ./rule-set/geosite-category-ads-all.srs ./publish/
+          # install -Dp ./rule-set/geosite-google.srs ./publish/
+          # install -Dp ./rule-set/geosite-apple.srs ./publish/
+          # install -Dp ./rule-set/geosite-telegram.srs ./publish/
+          # install -Dp ./rule-set/geosite-steam.srs ./publish/
+          # install -Dp ./rule-set/geosite-youku.srs ./publish/
+          # install -Dp ./rule-set/geosite-cloudflare.srs ./publish/
+          # install -Dp ./rule-set/geosite-cloudflare-cn.srs ./publish/
+          # install -Dp ./rule-set/geosite-fastly.srs ./publish/
+          # install -Dp ./rule-set/geosite-twitter.srs ./publish/
+          # install -Dp ./rule-set/geosite-facebook.srs ./publish/
+          # install -Dp ./rule-set/geosite-facebook-dev.srs ./publish/
+          # install -Dp ./rule-set/geosite-win-spy.srs ./publish/
+          # install -Dp ./rule-set/geosite-win-extra.srs ./publish/
+          # install -Dp ./rule-set/geosite-win-update.srs ./publish/
+          # install -Dp ./rule-set/geosite-alibabacloud.srs ./publish/
+          # install -Dp ./rule-set/geosite-alibaba@!cn.srs ./publish/
+          # install -Dp ./rule-set/geosite-youtube.srs ./publish/
+          # install -Dp ./rule-set/geosite-youtube@cn.srs ./publish/
+          # install -Dp ./rule-set/geosite-okx@cn.srs ./publish/
+          # install -Dp ./rule-set/geosite-binance.srs ./publish/
+          # install -Dp ./rule-set/geosite-okx.srs ./publish/
+          # install -Dp ./rule-set/geosite-apple-dev.srs ./publish/
+          # install -Dp ./rule-set/geosite-tencent.srs ./publish/
           
           
           cd ./publish || exit 1
@@ -170,22 +168,6 @@ jobs:
               mv "$file" "$newfile"
           done
            
-      - name: Release geosite rule sets
-        if: steps.build.outputs.skip != 'true'
-        run: |
-          chmod +x .github/release-rule-set.sh
-          cd rule-set
-          set -e -o pipefail
-          git init
-          git config --local user.email "github-action@users.noreply.github.com"
-          git config --local user.name "GitHub Action"
-          git remote add origin https://github-action:$GITHUB_TOKEN@github.com/gtpass/dbrules.git
-          git branch -M geosite-rule-set
-          git add .
-          git commit -m "Update rule-set"
-          git push -f origin geosite-rule-set
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build geoip
         id: buildgeoip
@@ -193,19 +175,19 @@ jobs:
            cd .geoip  || exit 1
            go run -v .
            
-      - name: Move  geoip srs files
-        run: |
-          install -Dp .geoip/rule-set/geoip-cn.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-jp.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-cloudflare.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-cloudfront.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-facebook.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-fastly.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-google.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-netflix.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-private.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-telegram.srs ./publish/
-          install -Dp .geoip/rule-set/geoip-twitter.srs  ./publish/
+      # - name: Move  geoip srs files
+      #   run: |
+      #     install -Dp .geoip/rule-set/geoip-cn.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-jp.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-cloudflare.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-cloudfront.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-facebook.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-fastly.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-google.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-netflix.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-private.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-telegram.srs ./publish/
+      #     install -Dp .geoip/rule-set/geoip-twitter.srs  ./publish/
           
       - name: mv default geoip rules  to singdefault
         if: steps.build.outputs.skip != 'true'
@@ -217,23 +199,42 @@ jobs:
               newfile=$(echo $file | sed 's/geoip-//g')
               mv "$file" "$newfile"
           done
-          
-      - name: Release geoip rule sets
-        if: steps.build.outputs.skip != 'true'
-        run: |
-          chmod +x .github/release-rule-set.sh
-          cd .geoip/rule-set
-          set -e -o pipefail
-          git init
-          git config --local user.email "github-action@users.noreply.github.com"
-          git config --local user.name "GitHub Action"
-          git remote add origin https://github-action:$GITHUB_TOKEN@github.com/gtpass/dbrules.git
-          git branch -M geoip-rule-set
-          git add .
-          git commit -m "Update rule-set"
-          git push -f origin geoip-rule-set
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      # - name: Release geosite rule sets
+      #   if: steps.build.outputs.skip != 'true'
+      #   run: |
+      #     chmod +x .github/release-rule-set.sh
+      #     cd rule-set
+      #     set -e -o pipefail
+      #     git init
+      #     git config --local user.email "github-action@users.noreply.github.com"
+      #     git config --local user.name "GitHub Action"
+      #     git remote add origin https://github-action:$GITHUB_TOKEN@github.com/gtpass/dbrules.git
+      #     git branch -M geosite-rule-set
+      #     git add .
+      #     git commit -m "Update rule-set"
+      #     git push -f origin geosite-rule-set
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      # - name: Release geoip rule sets
+      #   if: steps.build.outputs.skip != 'true'
+      #   run: |
+      #     chmod +x .github/release-rule-set.sh
+      #     cd .geoip/rule-set
+      #     set -e -o pipefail
+      #     git init
+      #     git config --local user.email "github-action@users.noreply.github.com"
+      #     git config --local user.name "GitHub Action"
+      #     git remote add origin https://github-action:$GITHUB_TOKEN@github.com/gtpass/dbrules.git
+      #     git branch -M geoip-rule-set
+      #     git add .
+      #     git commit -m "Update rule-set"
+      #     git push -f origin geoip-rule-set
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Generate sha256 hash
         if: steps.build.outputs.skip != 'true'
