--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,9 +103,10 @@ jobs:
         uses: actions/setup-go@v5
 
         with:
-          go-version: ^1.22
+          go-version: "^1.22"
+          check-latest: true
 
-          cache-dependency-path: ./community/go.sum
+          #cache-dependency-path: ./community/go.sum
 
           #go-version: ${{ steps.version.outputs.go_version }}
 
