--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -360,7 +360,7 @@ jobs:
           mkdir -p ./geoconvert/sites
           #geoip.db
           cd ./geoconvert/ || exit 1
-          wget https://github.com/SagerNet/sing-box/releases/download/v1.8.0-rc.5/sing-box-1.8.0-rc.5-linux-amd64.tar.gz -O sing-box.tar.gz && tar zxvf sing-box.tar.gz && mv sing-box-1.8.0-rc.5-linux-amd64/sing-box ./ && rm -r sing-box-1.8.0-rc.5-linux-amd64
+          wget https://github.com/SagerNet/sing-box/releases/download/v1.8.5/sing-box-1.8.5-linux-amd64.tar.gz -O sing-box.tar.gz && tar zxvf sing-box.tar.gz && mv sing-box-1.8.5-linux-amd64/sing-box ./ && rm -r sing-box-1.8.5-linux-amd64
           wget https://github.com/IrineSistiana/mosdns/releases/download/v4.5.3/mosdns-linux-amd64.zip -O mosdns.zip && unzip mosdns.zip
           chmod 755 mosdns sing-box 
           cp ./sing-box ../sing-box
